// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Supplicate (MCV) Bypass guard via direct token movement (MCV path) ERC20.transfer / transferFrom to pool must NOT mutate reserves 1`] = `
Object {
  "note": "Direct token moves cannot spoof LPP reserves (MCV path)",
  "reservesAfter": Object {
    "a": "194750000000000000000",
    "u": "194750000000000000000",
  },
  "reservesBefore": Object {
    "a": "194750000000000000000",
    "u": "194750000000000000000",
  },
  "role": "MCV",
}
`;

exports[`Supplicate (MCV) LP-MCV executes rebalance — ASSET->USDC 1`] = `
Object {
  "amountIn": "1000000000000000000",
  "callerBalances": Object {
    "after": Object {
      "a": "99999901750000000000000000",
      "u": "99999902744891443167305236",
    },
    "before": Object {
      "a": "99999902750000000000000000",
      "u": "99999901750000000000000000",
    },
  },
  "direction": "ASSET->USDC",
  "quotes": Object {
    "poolQuote": "994891443167305236",
    "routerStatic": "994891443167305236",
  },
  "reserves": Object {
    "after": Object {
      "a": "195750000000000000000",
      "u": "193755108556832694764",
    },
    "before": Object {
      "a": "194750000000000000000",
      "u": "194750000000000000000",
    },
  },
  "role": "MCV",
  "sqrtPriceX96": Object {
    "implied": Object {
      "after": "78823420943310241360681813811",
      "before": "79228162514264337593543950336",
    },
    "stored": Object {
      "after": "79228162514264337593543950336",
      "before": "79228162514264337593543950336",
    },
  },
}
`;

exports[`Supplicate (MCV) LP-MCV executes rebalance — USDC->ASSET 1`] = `
Object {
  "amountIn": "1000000000000000000",
  "caller": Object {
    "after": Object {
      "a": "99999902744891443167305236",
      "u": "99999901750000000000000000",
    },
    "before": Object {
      "a": "99999901750000000000000000",
      "u": "99999902750000000000000000",
    },
  },
  "direction": "USDC->ASSET",
  "poolQuote": "994891443167305236",
  "reserves": Object {
    "after": Object {
      "a": "193755108556832694764",
      "u": "195750000000000000000",
    },
    "before": Object {
      "a": "194750000000000000000",
      "u": "194750000000000000000",
    },
  },
  "role": "MCV",
  "sqrtPriceX96": Object {
    "implied": Object {
      "after": "79634982347456965771118830274",
      "before": "79228162514264337593543950336",
    },
    "stored": Object {
      "after": "79228162514264337593543950336",
      "before": "79228162514264337593543950336",
    },
  },
}
`;
